--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@lark-base-open/js-sdk": "0.3.5-alpha.4",
+    "axios": "^1.6.2",
     "element-plus": "^2.3.6",
     "reset-css": "^5.0.1",
     "vue": "^3.2.37",
