--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@icon-park/vue-next": "^1.4.2",
     "@lark-base-open/js-sdk": "0.3.5-alpha.4",
     "axios": "^1.6.2",
     "element-plus": "^2.3.6",
     "reset-css": "^5.0.1",
+    "typescript": "^4.9.5",
     "vue": "^3.2.37",
-    "vue-i18n": "^9.4.1",
-    "xgplayer": "^3.0.5",
-    "xgplayer-flv": "^3.0.5",
-    "xgplayer-hls": "^3.0.5"
+    "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
