--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@icon-park/vue-next": "^1.4.2",
-    "@lark-base-open/js-sdk": "0.3.5-alpha.4",
+    "@lark-base-open/js-sdk": "0.3.5",
     "axios": "^1.6.2",
     "element-plus": "^2.3.6",
     "reset-css": "^5.0.1",
@@ -19,9 +19,10 @@
     "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^3.0.1"
+    "vite": "^5.0.10"
   }
 }
