--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reset-css": "^5.0.1",
     "typescript": "^4.9.5",
     "vue": "^3.2.37",
+    "vue-draggable-plus": "^0.3.4",
     "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
