--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typescript": "^4.9.5",
     "vue": "^3.2.37",
     "vue-draggable-plus": "^0.3.4",
-    "vue-i18n": "^9.4.1"
+    "vue-i18n": "^9.4.1",
+    "vue-sonner": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
